vNEXT (in development)

 * Fix issue parsing CTCPs when the content contained multi-byte chars
 * If the server provides an invalid timestamp, the event now defaults to the current time

v0.10.2

 * Fix handling of multiple long lines sometimes dropping part of the line
 * Support lines with 8191 bytes of tags, as allowed by the message-tags spec
 * Fix a few more instances of occasional ConcurrentModificationExceptions

v0.10.1

 * Added NickChangeFailed event for when nicknames are in use, banned, etc
 * Added sendPart method
 * Fix occasional ConcurrentModificationException when adding state
 * (Internal) Moved message processors into their own package
 * (Internal) Added ExperimentalIrcClient interface for features not yet ready for release

v0.10.0

 * Batch start and end events are no longer included in BatchReceived events
 * Batches now expose complete metadata from their start event
 * Added support for labelled-replies capability and label message tags
 * Added support for message-tags capability after it moved from draft
 * Added new methods for sending raw lines to the IRC server
   * send(tagMap(...), command, arguments) replaces send(line)
   * send(command, arguments) is available if no tags are to be sent
   * the line is built automatically (with spaces/' :' added appropriately)
   * send(line) is deprecated and will be removed after v1.0.0
 * Add 'alwaysEchoMessages' behaviour that makes it easier to deal with servers
   that don't support the echo message capability
 * Added TargetedEvent, a subclass of IrcEvent, for all events that are
   targeted to a user or channel
 * (Internal) Added annotation to track removal of deprecated methods
 * (Internal) Migrate unit tests to use Mockk instead of Mockito

v0.9.0

 * Improve DSL for creating an IrcClient to allow parameters to be passed to server and profile
   e.g. IrcClient { server("irc.example.com", 6667) }
 * Add behaviour options