@@ -4,14 +4,23 @@ import com.dmdirc.ktirc.events.ModeChanged
 import com.dmdirc.ktirc.messages.RPL_CHANNELMODEIS
 import com.dmdirc.ktirc.messages.RPL_UMODEIS
 import com.dmdirc.ktirc.model.IrcMessage
+import com.dmdirc.ktirc.util.logger
 
 internal class ModeProcessor : MessageProcessor {
+
+    private val log by logger()
 
     override val commands = arrayOf(RPL_CHANNELMODEIS, RPL_UMODEIS, "MODE")
 
     override fun process(message: IrcMessage): List<ModeChanged> {
         val isDiscovery = message.command == RPL_CHANNELMODEIS || message.command == RPL_UMODEIS
         val paramOffset = if (message.command == RPL_CHANNELMODEIS) 1 else 0
+
+        if (message.params.size < paramOffset + 2) {
+            log.warning { "Discarding MODE line with insufficient parameters: $message" }
+            return emptyList()
+        }
+
         return listOf(ModeChanged(
                 message.metadata,
                 target = String(message.params[paramOffset]),
