@@ -1,7 +1,12 @@
 vNEXT (in development)
 
  * Fix issue parsing CTCPs when the content contained multi-byte chars
- * If the server provides an invalid timestamp, the event now defaults to the current time
+ * Fixed multiple issues when receiving malformed input from the server:
+   * Invalid server-time tags are now ignored and the current time used
+   * PRIVMSGs, NOTICEs and TOPICs with no target/message are now ignored
+   * CAPs with invalid or missing arguments are now ignored
+   * Better handling for duplicate JOIN messages
+   * Ignored messages are now logged more consistently
 
 v0.10.2
 
